# example_project

./: .gitignore  create_container.sh  embed.py  pyproject.toml  uv.toml
scripts/: chat.py  finetune_data_is_king.py  query.py  verify_overfit.py
src/: __init__.py  agnt.py  chroma_service.py  embed.py  mlflow_service.py  tools.py
