[project]
name = "example-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "datasets>=4.8.4",
    "sentencepiece>=0.2.1",
    "torch>=2.4.0",
    "transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
