[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "example-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "chromadb>=1.5.5",
    "datasets>=4.8.4",
    "mlflow>=3.11.1",
    "peft>=0.19.1",
    "sentencepiece>=0.2.1",
    "torch>=2.4.0",
    "transformers>=5.3.0",
    "trl>=1.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
